<resources>
    <string name="app_name">Youtube Background</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sun Asterisk</string>
    <string name="nav_header_subtitle">sun-asterisk.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_searchs">Searchs</string>
    <string name="text_description">Description of video</string>
    <string name="text_title">Title of video</string>
    <string name="item_setting">Setting</string>
    <string name="item_home">Home</string>
    <string name="item_history">History</string>
    <string name="title_communicate">Communicate</string>
    <string name="item_share">Share</string>
    <string name="item_introduce">Introduce</string>
    <string name="btn_prev">Previous</string>
    <string name="btn_play">Play</string>
    <string name="btn_skip">Stop</string>
    <string name="fav_add">Next</string>
    <string name="introduce">Youtube Background application was developed by [DN_OE20_Android] Nguyen Ngoc Tuyen - Trainee in Sun* Inc.</string>
    <string name="title_introduce">Introduce</string>
</resources>
