<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigationHome"
            android:icon="@drawable/ic_home"
            android:title="@string/item_home"/>
        <item
            android:id="@+id/navigationHistory"
            android:icon="@drawable/ic_history"
            android:title="@string/item_history"/>
        <item
            android:id="@+id/navigationSetting"
            android:icon="@drawable/ic_settings"
            android:title="@string/item_setting"/>
    </group>

    <item android:title="@string/title_communicate">
        <menu>
            <item
                android:id="@+id/navigationShare"
                android:icon="@drawable/ic_share"
                android:title="@string/item_share"/>
            <item
                android:id="@+id/navigationIntroduce"
                android:icon="@drawable/ic_note"
                android:title="@string/item_introduce"/>
        </menu>
    </item>
</menu>
